--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
